// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<OrderTabOrders /> dark: renders correctly 1`] = `
<View
  style={
    Array [
      Object {},
      Array [
        Object {},
        undefined,
      ],
    ]
  }
>
  <View
    style={
      Array [
        Object {},
        Array [
          Object {
            "display": "flex",
            "flexDirection": "row",
            "height": "100%",
          },
          undefined,
        ],
      ]
    }
  >
    <RCTScrollView
      horizontal={true}
      showsHorizontalScrollIndicator={false}
    >
      <View>
        <View
          scrollWidth={undefined}
          style={
            Array [
              Object {},
              Array [
                Object {
                  "position": "relative",
                  "width": "auto",
                },
                undefined,
              ],
            ]
          }
        >
          <View
            style={
              Array [
                Object {},
                undefined,
              ]
            }
          >
            <View
              data={
                Array [
                  "Time",
                  "Pair",
                  "Type",
                  "Price (WETH)",
                  "Total (WETH)",
                  "Fee (ZRX)",
                  "",
                ]
              }
              flexAr={
                Array [
                  2,
                  2,
                  1,
                  2,
                  2,
                  2,
                  1,
                ]
              }
              header={true}
              style={
                Array [
                  Object {},
                  Array [
                    Object {
                      "alignItems": "center",
                      "backgroundColor": "#000000",
                      "display": "flex",
                      "flexDirection": "row",
                      "flexWrap": "nowrap",
                      "paddingBottom": 5,
                      "paddingLeft": 5,
                      "paddingRight": 5,
                      "paddingTop": 5,
                    },
                    undefined,
                  ],
                ]
              }
              width={540}
            >
              <View
                flexItem={2}
                style={
                  Array [
                    Object {},
                    Array [
                      Object {
                        "alignItems": "center",
                        "flexBasis": 0,
                        "flexGrow": 2,
                        "flexShrink": 1,
                        "justifyContent": "center",
                      },
                      undefined,
                    ],
                  ]
                }
                width={540}
              >
                <Text
                  accessible={true}
                  allowFontScaling={true}
                  bold={true}
                  data="Time"
                  ellipsizeMode="tail"
                  style={
                    Array [
                      Object {
                        "color": "#fcfcfc",
                        "fontFamily": "Open Sans",
                      },
                      Array [
                        Object {
                          "fontSize": 12,
                          "fontWeight": "700",
                          "lineHeight": 15,
                        },
                        undefined,
                      ],
                    ]
                  }
                >
                  Time
                </Text>
              </View>
              <View
                flexItem={2}
                style={
                  Array [
                    Object {},
                    Array [
                      Object {
                        "alignItems": "center",
                        "flexBasis": 0,
                        "flexGrow": 2,
                        "flexShrink": 1,
                        "justifyContent": "center",
                      },
                      undefined,
                    ],
                  ]
                }
                width={540}
              >
                <Text
                  accessible={true}
                  allowFontScaling={true}
                  bold={true}
                  data="Pair"
                  ellipsizeMode="tail"
                  style={
                    Array [
                      Object {
                        "color": "#fcfcfc",
                        "fontFamily": "Open Sans",
                      },
                      Array [
                        Object {
                          "fontSize": 12,
                          "fontWeight": "700",
                          "lineHeight": 15,
                        },
                        undefined,
                      ],
                    ]
                  }
                >
                  Pair
                </Text>
              </View>
              <View
                flexItem={1}
                style={
                  Array [
                    Object {},
                    Array [
                      Object {
                        "alignItems": "center",
                        "flexBasis": 0,
                        "flexGrow": 1,
                        "flexShrink": 1,
                        "justifyContent": "center",
                      },
                      undefined,
                    ],
                  ]
                }
                width={540}
              >
                <Text
                  accessible={true}
                  allowFontScaling={true}
                  bold={true}
                  data="Type"
                  ellipsizeMode="tail"
                  style={
                    Array [
                      Object {
                        "color": "#fcfcfc",
                        "fontFamily": "Open Sans",
                      },
                      Array [
                        Object {
                          "fontSize": 12,
                          "fontWeight": "700",
                          "lineHeight": 15,
                        },
                        undefined,
                      ],
                    ]
                  }
                >
                  Type
                </Text>
              </View>
              <View
                flexItem={2}
                style={
                  Array [
                    Object {},
                    Array [
                      Object {
                        "alignItems": "center",
                        "flexBasis": 0,
                        "flexGrow": 2,
                        "flexShrink": 1,
                        "justifyContent": "center",
                      },
                      undefined,
                    ],
                  ]
                }
                width={540}
              >
                <Text
                  accessible={true}
                  allowFontScaling={true}
                  bold={true}
                  data="Price (WETH)"
                  ellipsizeMode="tail"
                  style={
                    Array [
                      Object {
                        "color": "#fcfcfc",
                        "fontFamily": "Open Sans",
                      },
                      Array [
                        Object {
                          "fontSize": 12,
                          "fontWeight": "700",
                          "lineHeight": 15,
                        },
                        undefined,
                      ],
                    ]
                  }
                >
                  Price (WETH)
                </Text>
              </View>
              <View
                flexItem={2}
                style={
                  Array [
                    Object {},
                    Array [
                      Object {
                        "alignItems": "center",
                        "flexBasis": 0,
                        "flexGrow": 2,
                        "flexShrink": 1,
                        "justifyContent": "center",
                      },
                      undefined,
                    ],
                  ]
                }
                width={540}
              >
                <Text
                  accessible={true}
                  allowFontScaling={true}
                  bold={true}
                  data="Total (WETH)"
                  ellipsizeMode="tail"
                  style={
                    Array [
                      Object {
                        "color": "#fcfcfc",
                        "fontFamily": "Open Sans",
                      },
                      Array [
                        Object {
                          "fontSize": 12,
                          "fontWeight": "700",
                          "lineHeight": 15,
                        },
                        undefined,
                      ],
                    ]
                  }
                >
                  Total (WETH)
                </Text>
              </View>
              <View
                flexItem={2}
                style={
                  Array [
                    Object {},
                    Array [
                      Object {
                        "alignItems": "center",
                        "flexBasis": 0,
                        "flexGrow": 2,
                        "flexShrink": 1,
                        "justifyContent": "center",
                      },
                      undefined,
                    ],
                  ]
                }
                width={540}
              >
                <Text
                  accessible={true}
                  allowFontScaling={true}
                  bold={true}
                  data="Fee (ZRX)"
                  ellipsizeMode="tail"
                  style={
                    Array [
                      Object {
                        "color": "#fcfcfc",
                        "fontFamily": "Open Sans",
                      },
                      Array [
                        Object {
                          "fontSize": 12,
                          "fontWeight": "700",
                          "lineHeight": 15,
                        },
                        undefined,
                      ],
                    ]
                  }
                >
                  Fee (ZRX)
                </Text>
              </View>
              <View
                flexItem={1}
                style={
                  Array [
                    Object {},
                    Array [
                      Object {
                        "alignItems": "center",
                        "flexBasis": 0,
                        "flexGrow": 1,
                        "flexShrink": 1,
                        "justifyContent": "center",
                      },
                      undefined,
                    ],
                  ]
                }
                width={540}
              >
                <Text
                  accessible={true}
                  allowFontScaling={true}
                  bold={true}
                  data=""
                  ellipsizeMode="tail"
                  style={
                    Array [
                      Object {
                        "color": "#fcfcfc",
                        "fontFamily": "Open Sans",
                      },
                      Array [
                        Object {
                          "fontSize": 12,
                          "fontWeight": "700",
                          "lineHeight": 15,
                        },
                        undefined,
                      ],
                    ]
                  }
                >
                  
                </Text>
              </View>
            </View>
            <View
              style={
                Array [
                  Object {},
                  Array [
                    Object {
                      "borderBottomWidth": 1,
                      "borderColor": "#282828",
                      "borderTopWidth": 1,
                      "height": 5,
                    },
                    undefined,
                  ],
                ]
              }
            />
          </View>
          <RCTScrollView
            data={
              Array [
                Array [
                  "22/01/04 14:11:38",
                  "MRX/WETH",
                  <RedLabel>
                    Sell
                  </RedLabel>,
                  "0.01617607",
                  "0.01617607",
                  "0.00",
                  <OrderTableDeleteButton
                    onPress={[Function]}
                  />,
                ],
                Array [
                  "22/01/04 14:11:38",
                  "MRX/WETH",
                  <GreenLabel>
                    Buy
                  </GreenLabel>,
                  "0.01617607",
                  "0.01617607",
                  "0.00",
                  <OrderTableDeleteButton
                    onPress={[Function]}
                  />,
                ],
              ]
            }
            disableVirtualization={false}
            getItem={[Function]}
            getItemCount={[Function]}
            horizontal={false}
            initialNumToRender={10}
            invertStickyHeaders={undefined}
            keyExtractor={[Function]}
            maxToRenderPerBatch={10}
            numColumns={1}
            onContentSizeChange={[Function]}
            onEndReachedThreshold={2}
            onLayout={[Function]}
            onMomentumScrollEnd={[Function]}
            onScroll={[Function]}
            onScrollBeginDrag={[Function]}
            onScrollEndDrag={[Function]}
            renderItem={[Function]}
            scrollEventThrottle={50}
            stickyHeaderIndices={Array []}
            updateCellsBatchingPeriod={50}
            viewabilityConfigCallbackPairs={Array []}
            windowSize={21}
          >
            <View>
              <View
                onLayout={[Function]}
                style={null}
              >
                <View
                  data={
                    Array [
                      "22/01/04 14:11:38",
                      "MRX/WETH",
                      <RedLabel>
                        Sell
                      </RedLabel>,
                      "0.01617607",
                      "0.01617607",
                      "0.00",
                      <OrderTableDeleteButton
                        onPress={[Function]}
                      />,
                    ]
                  }
                  even={0}
                  flexAr={
                    Array [
                      2,
                      2,
                      1,
                      2,
                      2,
                      2,
                      1,
                    ]
                  }
                  style={
                    Array [
                      Object {},
                      Array [
                        Object {
                          "alignItems": "center",
                          "backgroundColor": "#000000",
                          "display": "flex",
                          "flexDirection": "row",
                          "flexWrap": "nowrap",
                          "paddingBottom": 5,
                          "paddingLeft": 5,
                          "paddingRight": 5,
                          "paddingTop": 5,
                        },
                        undefined,
                      ],
                    ]
                  }
                  width={540}
                >
                  <View
                    even={0}
                    flexItem={2}
                    style={
                      Array [
                        Object {},
                        Array [
                          Object {
                            "alignItems": "center",
                            "flexBasis": 0,
                            "flexGrow": 2,
                            "flexShrink": 1,
                            "justifyContent": "center",
                          },
                          undefined,
                        ],
                      ]
                    }
                    width={540}
                  >
                    <Text
                      accessible={true}
                      allowFontScaling={true}
                      bold={undefined}
                      data="22/01/04 14:11:38"
                      ellipsizeMode="tail"
                      style={
                        Array [
                          Object {
                            "color": "#fcfcfc",
                            "fontFamily": "Open Sans",
                          },
                          Array [
                            Object {
                              "fontSize": 12,
                              "lineHeight": 15,
                            },
                            undefined,
                          ],
                        ]
                      }
                    >
                      22/01/04 14:11:38
                    </Text>
                  </View>
                  <View
                    even={0}
                    flexItem={2}
                    style={
                      Array [
                        Object {},
                        Array [
                          Object {
                            "alignItems": "center",
                            "flexBasis": 0,
                            "flexGrow": 2,
                            "flexShrink": 1,
                            "justifyContent": "center",
                          },
                          undefined,
                        ],
                      ]
                    }
                    width={540}
                  >
                    <Text
                      accessible={true}
                      allowFontScaling={true}
                      bold={undefined}
                      data="MRX/WETH"
                      ellipsizeMode="tail"
                      style={
                        Array [
                          Object {
                            "color": "#fcfcfc",
                            "fontFamily": "Open Sans",
                          },
                          Array [
                            Object {
                              "fontSize": 12,
                              "lineHeight": 15,
                            },
                            undefined,
                          ],
                        ]
                      }
                    >
                      MRX/WETH
                    </Text>
                  </View>
                  <View
                    even={0}
                    flexItem={1}
                    style={
                      Array [
                        Object {},
                        Array [
                          Object {
                            "alignItems": "center",
                            "flexBasis": 0,
                            "flexGrow": 1,
                            "flexShrink": 1,
                            "justifyContent": "center",
                          },
                          undefined,
                        ],
                      ]
                    }
                    width={540}
                  >
                    <Text
                      accessible={true}
                      allowFontScaling={true}
                      ellipsizeMode="tail"
                      index={undefined}
                      style={
                        Array [
                          Object {
                            "color": "#fcfcfc",
                            "fontFamily": "Open Sans",
                          },
                          Array [
                            Object {
                              "color": "#f25c74",
                              "fontFamily": "Roboto Condensed",
                              "fontSize": 12,
                              "textAlign": "center",
                            },
                            undefined,
                          ],
                        ]
                      }
                    >
                      Sell
                    </Text>
                  </View>
                  <View
                    even={0}
                    flexItem={2}
                    style={
                      Array [
                        Object {},
                        Array [
                          Object {
                            "alignItems": "center",
                            "flexBasis": 0,
                            "flexGrow": 2,
                            "flexShrink": 1,
                            "justifyContent": "center",
                          },
                          undefined,
                        ],
                      ]
                    }
                    width={540}
                  >
                    <Text
                      accessible={true}
                      allowFontScaling={true}
                      bold={undefined}
                      data="0.01617607"
                      ellipsizeMode="tail"
                      style={
                        Array [
                          Object {
                            "color": "#fcfcfc",
                            "fontFamily": "Open Sans",
                          },
                          Array [
                            Object {
                              "fontSize": 12,
                              "lineHeight": 15,
                            },
                            undefined,
                          ],
                        ]
                      }
                    >
                      0.01617607
                    </Text>
                  </View>
                  <View
                    even={0}
                    flexItem={2}
                    style={
                      Array [
                        Object {},
                        Array [
                          Object {
                            "alignItems": "center",
                            "flexBasis": 0,
                            "flexGrow": 2,
                            "flexShrink": 1,
                            "justifyContent": "center",
                          },
                          undefined,
                        ],
                      ]
                    }
                    width={540}
                  >
                    <Text
                      accessible={true}
                      allowFontScaling={true}
                      bold={undefined}
                      data="0.01617607"
                      ellipsizeMode="tail"
                      style={
                        Array [
                          Object {
                            "color": "#fcfcfc",
                            "fontFamily": "Open Sans",
                          },
                          Array [
                            Object {
                              "fontSize": 12,
                              "lineHeight": 15,
                            },
                            undefined,
                          ],
                        ]
                      }
                    >
                      0.01617607
                    </Text>
                  </View>
                  <View
                    even={0}
                    flexItem={2}
                    style={
                      Array [
                        Object {},
                        Array [
                          Object {
                            "alignItems": "center",
                            "flexBasis": 0,
                            "flexGrow": 2,
                            "flexShrink": 1,
                            "justifyContent": "center",
                          },
                          undefined,
                        ],
                      ]
                    }
                    width={540}
                  >
                    <Text
                      accessible={true}
                      allowFontScaling={true}
                      bold={undefined}
                      data="0.00"
                      ellipsizeMode="tail"
                      style={
                        Array [
                          Object {
                            "color": "#fcfcfc",
                            "fontFamily": "Open Sans",
                          },
                          Array [
                            Object {
                              "fontSize": 12,
                              "lineHeight": 15,
                            },
                            undefined,
                          ],
                        ]
                      }
                    >
                      0.00
                    </Text>
                  </View>
                  <View
                    even={0}
                    flexItem={1}
                    style={
                      Array [
                        Object {},
                        Array [
                          Object {
                            "alignItems": "center",
                            "flexBasis": 0,
                            "flexGrow": 1,
                            "flexShrink": 1,
                            "justifyContent": "center",
                          },
                          undefined,
                        ],
                      ]
                    }
                    width={540}
                  >
                    <View
                      style={
                        Array [
                          Object {},
                          Array [
                            Object {
                              "alignSelf": "center",
                              "display": "flex",
                              "height": 32,
                              "justifyContent": "center",
                              "paddingBottom": 0,
                              "paddingLeft": 5,
                              "paddingRight": 5,
                              "paddingTop": 0,
                              "width": 32,
                            },
                            undefined,
                          ],
                        ]
                      }
                    >
                      <View
                        accessibilityComponentType={undefined}
                        accessibilityLabel={undefined}
                        accessibilityTraits={undefined}
                        accessible={true}
                        collapsable={undefined}
                        hasTVPreferredFocus={undefined}
                        hitSlop={undefined}
                        isTVSelectable={true}
                        nativeID={undefined}
                        onLayout={undefined}
                        onResponderGrant={[Function]}
                        onResponderMove={[Function]}
                        onResponderRelease={[Function]}
                        onResponderTerminate={[Function]}
                        onResponderTerminationRequest={[Function]}
                        onStartShouldSetResponder={[Function]}
                        style={
                          Object {
                            "backgroundColor": "#f25c74",
                            "borderRadius": 20,
                            "opacity": 1,
                            "paddingBottom": 5,
                            "paddingLeft": 5,
                            "paddingRight": 5,
                            "paddingTop": 5,
                          }
                        }
                        testID={undefined}
                        tvParallaxProperties={undefined}
                      >
                        <Text
                          accessible={true}
                          allowFontScaling={false}
                          ellipsizeMode="tail"
                          style={
                            Array [
                              Object {
                                "color": undefined,
                                "fontSize": 11,
                              },
                              Array [
                                Object {
                                  "color": "#fcfcfc",
                                },
                                Array [
                                  Object {
                                    "color": "#000000",
                                  },
                                  undefined,
                                ],
                              ],
                              Object {
                                "fontFamily": "icomoon",
                                "fontStyle": "normal",
                                "fontWeight": "normal",
                              },
                            ]
                          }
                        >
                          
                        </Text>
                      </View>
                    </View>
                  </View>
                </View>
              </View>
              <View
                onLayout={[Function]}
                style={null}
              >
                <View
                  data={
                    Array [
                      "22/01/04 14:11:38",
                      "MRX/WETH",
                      <GreenLabel>
                        Buy
                      </GreenLabel>,
                      "0.01617607",
                      "0.01617607",
                      "0.00",
                      <OrderTableDeleteButton
                        onPress={[Function]}
                      />,
                    ]
                  }
                  even={1}
                  flexAr={
                    Array [
                      2,
                      2,
                      1,
                      2,
                      2,
                      2,
                      1,
                    ]
                  }
                  style={
                    Array [
                      Object {},
                      Array [
                        Object {
                          "alignItems": "center",
                          "backgroundColor": "#282828",
                          "display": "flex",
                          "flexDirection": "row",
                          "flexWrap": "nowrap",
                          "paddingBottom": 5,
                          "paddingLeft": 5,
                          "paddingRight": 5,
                          "paddingTop": 5,
                        },
                        undefined,
                      ],
                    ]
                  }
                  width={540}
                >
                  <View
                    even={1}
                    flexItem={2}
                    style={
                      Array [
                        Object {},
                        Array [
                          Object {
                            "alignItems": "center",
                            "flexBasis": 0,
                            "flexGrow": 2,
                            "flexShrink": 1,
                            "justifyContent": "center",
                          },
                          undefined,
                        ],
                      ]
                    }
                    width={540}
                  >
                    <Text
                      accessible={true}
                      allowFontScaling={true}
                      bold={undefined}
                      data="22/01/04 14:11:38"
                      ellipsizeMode="tail"
                      style={
                        Array [
                          Object {
                            "color": "#fcfcfc",
                            "fontFamily": "Open Sans",
                          },
                          Array [
                            Object {
                              "fontSize": 12,
                              "lineHeight": 15,
                            },
                            undefined,
                          ],
                        ]
                      }
                    >
                      22/01/04 14:11:38
                    </Text>
                  </View>
                  <View
                    even={1}
                    flexItem={2}
                    style={
                      Array [
                        Object {},
                        Array [
                          Object {
                            "alignItems": "center",
                            "flexBasis": 0,
                            "flexGrow": 2,
                            "flexShrink": 1,
                            "justifyContent": "center",
                          },
                          undefined,
                        ],
                      ]
                    }
                    width={540}
                  >
                    <Text
                      accessible={true}
                      allowFontScaling={true}
                      bold={undefined}
                      data="MRX/WETH"
                      ellipsizeMode="tail"
                      style={
                        Array [
                          Object {
                            "color": "#fcfcfc",
                            "fontFamily": "Open Sans",
                          },
                          Array [
                            Object {
                              "fontSize": 12,
                              "lineHeight": 15,
                            },
                            undefined,
                          ],
                        ]
                      }
                    >
                      MRX/WETH
                    </Text>
                  </View>
                  <View
                    even={1}
                    flexItem={1}
                    style={
                      Array [
                        Object {},
                        Array [
                          Object {
                            "alignItems": "center",
                            "flexBasis": 0,
                            "flexGrow": 1,
                            "flexShrink": 1,
                            "justifyContent": "center",
                          },
                          undefined,
                        ],
                      ]
                    }
                    width={540}
                  >
                    <Text
                      accessible={true}
                      allowFontScaling={true}
                      ellipsizeMode="tail"
                      index={undefined}
                      style={
                        Array [
                          Object {
                            "color": "#fcfcfc",
                            "fontFamily": "Open Sans",
                          },
                          Array [
                            Object {
                              "color": "#2a986f",
                              "fontFamily": "Roboto Condensed",
                              "fontSize": 12,
                              "textAlign": "center",
                            },
                            undefined,
                          ],
                        ]
                      }
                    >
                      Buy
                    </Text>
                  </View>
                  <View
                    even={1}
                    flexItem={2}
                    style={
                      Array [
                        Object {},
                        Array [
                          Object {
                            "alignItems": "center",
                            "flexBasis": 0,
                            "flexGrow": 2,
                            "flexShrink": 1,
                            "justifyContent": "center",
                          },
                          undefined,
                        ],
                      ]
                    }
                    width={540}
                  >
                    <Text
                      accessible={true}
                      allowFontScaling={true}
                      bold={undefined}
                      data="0.01617607"
                      ellipsizeMode="tail"
                      style={
                        Array [
                          Object {
                            "color": "#fcfcfc",
                            "fontFamily": "Open Sans",
                          },
                          Array [
                            Object {
                              "fontSize": 12,
                              "lineHeight": 15,
                            },
                            undefined,
                          ],
                        ]
                      }
                    >
                      0.01617607
                    </Text>
                  </View>
                  <View
                    even={1}
                    flexItem={2}
                    style={
                      Array [
                        Object {},
                        Array [
                          Object {
                            "alignItems": "center",
                            "flexBasis": 0,
                            "flexGrow": 2,
                            "flexShrink": 1,
                            "justifyContent": "center",
                          },
                          undefined,
                        ],
                      ]
                    }
                    width={540}
                  >
                    <Text
                      accessible={true}
                      allowFontScaling={true}
                      bold={undefined}
                      data="0.01617607"
                      ellipsizeMode="tail"
                      style={
                        Array [
                          Object {
                            "color": "#fcfcfc",
                            "fontFamily": "Open Sans",
                          },
                          Array [
                            Object {
                              "fontSize": 12,
                              "lineHeight": 15,
                            },
                            undefined,
                          ],
                        ]
                      }
                    >
                      0.01617607
                    </Text>
                  </View>
                  <View
                    even={1}
                    flexItem={2}
                    style={
                      Array [
                        Object {},
                        Array [
                          Object {
                            "alignItems": "center",
                            "flexBasis": 0,
                            "flexGrow": 2,
                            "flexShrink": 1,
                            "justifyContent": "center",
                          },
                          undefined,
                        ],
                      ]
                    }
                    width={540}
                  >
                    <Text
                      accessible={true}
                      allowFontScaling={true}
                      bold={undefined}
                      data="0.00"
                      ellipsizeMode="tail"
                      style={
                        Array [
                          Object {
                            "color": "#fcfcfc",
                            "fontFamily": "Open Sans",
                          },
                          Array [
                            Object {
                              "fontSize": 12,
                              "lineHeight": 15,
                            },
                            undefined,
                          ],
                        ]
                      }
                    >
                      0.00
                    </Text>
                  </View>
                  <View
                    even={1}
                    flexItem={1}
                    style={
                      Array [
                        Object {},
                        Array [
                          Object {
                            "alignItems": "center",
                            "flexBasis": 0,
                            "flexGrow": 1,
                            "flexShrink": 1,
                            "justifyContent": "center",
                          },
                          undefined,
                        ],
                      ]
                    }
                    width={540}
                  >
                    <View
                      style={
                        Array [
                          Object {},
                          Array [
                            Object {
                              "alignSelf": "center",
                              "display": "flex",
                              "height": 32,
                              "justifyContent": "center",
                              "paddingBottom": 0,
                              "paddingLeft": 5,
                              "paddingRight": 5,
                              "paddingTop": 0,
                              "width": 32,
                            },
                            undefined,
                          ],
                        ]
                      }
                    >
                      <View
                        accessibilityComponentType={undefined}
                        accessibilityLabel={undefined}
                        accessibilityTraits={undefined}
                        accessible={true}
                        collapsable={undefined}
                        hasTVPreferredFocus={undefined}
                        hitSlop={undefined}
                        isTVSelectable={true}
                        nativeID={undefined}
                        onLayout={undefined}
                        onResponderGrant={[Function]}
                        onResponderMove={[Function]}
                        onResponderRelease={[Function]}
                        onResponderTerminate={[Function]}
                        onResponderTerminationRequest={[Function]}
                        onStartShouldSetResponder={[Function]}
                        style={
                          Object {
                            "backgroundColor": "#f25c74",
                            "borderRadius": 20,
                            "opacity": 1,
                            "paddingBottom": 5,
                            "paddingLeft": 5,
                            "paddingRight": 5,
                            "paddingTop": 5,
                          }
                        }
                        testID={undefined}
                        tvParallaxProperties={undefined}
                      >
                        <Text
                          accessible={true}
                          allowFontScaling={false}
                          ellipsizeMode="tail"
                          style={
                            Array [
                              Object {
                                "color": undefined,
                                "fontSize": 11,
                              },
                              Array [
                                Object {
                                  "color": "#fcfcfc",
                                },
                                Array [
                                  Object {
                                    "color": "#000000",
                                  },
                                  undefined,
                                ],
                              ],
                              Object {
                                "fontFamily": "icomoon",
                                "fontStyle": "normal",
                                "fontWeight": "normal",
                              },
                            ]
                          }
                        >
                          
                        </Text>
                      </View>
                    </View>
                  </View>
                </View>
              </View>
            </View>
          </RCTScrollView>
        </View>
      </View>
    </RCTScrollView>
  </View>
</View>
`;

exports[`<OrderTabOrders /> light: renders correctly 1`] = `
<View
  style={
    Array [
      Object {},
      Array [
        Object {},
        undefined,
      ],
    ]
  }
>
  <View
    style={
      Array [
        Object {},
        Array [
          Object {
            "display": "flex",
            "flexDirection": "row",
            "height": "100%",
          },
          undefined,
        ],
      ]
    }
  >
    <RCTScrollView
      horizontal={true}
      showsHorizontalScrollIndicator={false}
    >
      <View>
        <View
          scrollWidth={undefined}
          style={
            Array [
              Object {},
              Array [
                Object {
                  "position": "relative",
                  "width": "auto",
                },
                undefined,
              ],
            ]
          }
        >
          <View
            style={
              Array [
                Object {},
                undefined,
              ]
            }
          >
            <View
              data={
                Array [
                  "Time",
                  "Pair",
                  "Type",
                  "Price (WETH)",
                  "Total (WETH)",
                  "Fee (ZRX)",
                  "",
                ]
              }
              flexAr={
                Array [
                  2,
                  2,
                  1,
                  2,
                  2,
                  2,
                  1,
                ]
              }
              header={true}
              style={
                Array [
                  Object {},
                  Array [
                    Object {
                      "alignItems": "center",
                      "backgroundColor": "#fefaec",
                      "display": "flex",
                      "flexDirection": "row",
                      "flexWrap": "nowrap",
                      "paddingBottom": 5,
                      "paddingLeft": 5,
                      "paddingRight": 5,
                      "paddingTop": 5,
                    },
                    undefined,
                  ],
                ]
              }
              width={540}
            >
              <View
                flexItem={2}
                style={
                  Array [
                    Object {},
                    Array [
                      Object {
                        "alignItems": "center",
                        "flexBasis": 0,
                        "flexGrow": 2,
                        "flexShrink": 1,
                        "justifyContent": "center",
                      },
                      undefined,
                    ],
                  ]
                }
                width={540}
              >
                <Text
                  accessible={true}
                  allowFontScaling={true}
                  bold={true}
                  data="Time"
                  ellipsizeMode="tail"
                  style={
                    Array [
                      Object {
                        "color": "#000000",
                        "fontFamily": "Open Sans",
                      },
                      Array [
                        Object {
                          "fontSize": 12,
                          "fontWeight": "700",
                          "lineHeight": 15,
                        },
                        undefined,
                      ],
                    ]
                  }
                >
                  Time
                </Text>
              </View>
              <View
                flexItem={2}
                style={
                  Array [
                    Object {},
                    Array [
                      Object {
                        "alignItems": "center",
                        "flexBasis": 0,
                        "flexGrow": 2,
                        "flexShrink": 1,
                        "justifyContent": "center",
                      },
                      undefined,
                    ],
                  ]
                }
                width={540}
              >
                <Text
                  accessible={true}
                  allowFontScaling={true}
                  bold={true}
                  data="Pair"
                  ellipsizeMode="tail"
                  style={
                    Array [
                      Object {
                        "color": "#000000",
                        "fontFamily": "Open Sans",
                      },
                      Array [
                        Object {
                          "fontSize": 12,
                          "fontWeight": "700",
                          "lineHeight": 15,
                        },
                        undefined,
                      ],
                    ]
                  }
                >
                  Pair
                </Text>
              </View>
              <View
                flexItem={1}
                style={
                  Array [
                    Object {},
                    Array [
                      Object {
                        "alignItems": "center",
                        "flexBasis": 0,
                        "flexGrow": 1,
                        "flexShrink": 1,
                        "justifyContent": "center",
                      },
                      undefined,
                    ],
                  ]
                }
                width={540}
              >
                <Text
                  accessible={true}
                  allowFontScaling={true}
                  bold={true}
                  data="Type"
                  ellipsizeMode="tail"
                  style={
                    Array [
                      Object {
                        "color": "#000000",
                        "fontFamily": "Open Sans",
                      },
                      Array [
                        Object {
                          "fontSize": 12,
                          "fontWeight": "700",
                          "lineHeight": 15,
                        },
                        undefined,
                      ],
                    ]
                  }
                >
                  Type
                </Text>
              </View>
              <View
                flexItem={2}
                style={
                  Array [
                    Object {},
                    Array [
                      Object {
                        "alignItems": "center",
                        "flexBasis": 0,
                        "flexGrow": 2,
                        "flexShrink": 1,
                        "justifyContent": "center",
                      },
                      undefined,
                    ],
                  ]
                }
                width={540}
              >
                <Text
                  accessible={true}
                  allowFontScaling={true}
                  bold={true}
                  data="Price (WETH)"
                  ellipsizeMode="tail"
                  style={
                    Array [
                      Object {
                        "color": "#000000",
                        "fontFamily": "Open Sans",
                      },
                      Array [
                        Object {
                          "fontSize": 12,
                          "fontWeight": "700",
                          "lineHeight": 15,
                        },
                        undefined,
                      ],
                    ]
                  }
                >
                  Price (WETH)
                </Text>
              </View>
              <View
                flexItem={2}
                style={
                  Array [
                    Object {},
                    Array [
                      Object {
                        "alignItems": "center",
                        "flexBasis": 0,
                        "flexGrow": 2,
                        "flexShrink": 1,
                        "justifyContent": "center",
                      },
                      undefined,
                    ],
                  ]
                }
                width={540}
              >
                <Text
                  accessible={true}
                  allowFontScaling={true}
                  bold={true}
                  data="Total (WETH)"
                  ellipsizeMode="tail"
                  style={
                    Array [
                      Object {
                        "color": "#000000",
                        "fontFamily": "Open Sans",
                      },
                      Array [
                        Object {
                          "fontSize": 12,
                          "fontWeight": "700",
                          "lineHeight": 15,
                        },
                        undefined,
                      ],
                    ]
                  }
                >
                  Total (WETH)
                </Text>
              </View>
              <View
                flexItem={2}
                style={
                  Array [
                    Object {},
                    Array [
                      Object {
                        "alignItems": "center",
                        "flexBasis": 0,
                        "flexGrow": 2,
                        "flexShrink": 1,
                        "justifyContent": "center",
                      },
                      undefined,
                    ],
                  ]
                }
                width={540}
              >
                <Text
                  accessible={true}
                  allowFontScaling={true}
                  bold={true}
                  data="Fee (ZRX)"
                  ellipsizeMode="tail"
                  style={
                    Array [
                      Object {
                        "color": "#000000",
                        "fontFamily": "Open Sans",
                      },
                      Array [
                        Object {
                          "fontSize": 12,
                          "fontWeight": "700",
                          "lineHeight": 15,
                        },
                        undefined,
                      ],
                    ]
                  }
                >
                  Fee (ZRX)
                </Text>
              </View>
              <View
                flexItem={1}
                style={
                  Array [
                    Object {},
                    Array [
                      Object {
                        "alignItems": "center",
                        "flexBasis": 0,
                        "flexGrow": 1,
                        "flexShrink": 1,
                        "justifyContent": "center",
                      },
                      undefined,
                    ],
                  ]
                }
                width={540}
              >
                <Text
                  accessible={true}
                  allowFontScaling={true}
                  bold={true}
                  data=""
                  ellipsizeMode="tail"
                  style={
                    Array [
                      Object {
                        "color": "#000000",
                        "fontFamily": "Open Sans",
                      },
                      Array [
                        Object {
                          "fontSize": 12,
                          "fontWeight": "700",
                          "lineHeight": 15,
                        },
                        undefined,
                      ],
                    ]
                  }
                >
                  
                </Text>
              </View>
            </View>
            <View
              style={
                Array [
                  Object {},
                  Array [
                    Object {
                      "borderBottomWidth": 1,
                      "borderColor": "#5d5959",
                      "borderTopWidth": 1,
                      "height": 5,
                    },
                    undefined,
                  ],
                ]
              }
            />
          </View>
          <RCTScrollView
            data={
              Array [
                Array [
                  "22/01/04 14:11:38",
                  "MRX/WETH",
                  <RedLabel>
                    Sell
                  </RedLabel>,
                  "0.01617607",
                  "0.01617607",
                  "0.00",
                  <OrderTableDeleteButton
                    onPress={[Function]}
                  />,
                ],
                Array [
                  "22/01/04 14:11:38",
                  "MRX/WETH",
                  <GreenLabel>
                    Buy
                  </GreenLabel>,
                  "0.01617607",
                  "0.01617607",
                  "0.00",
                  <OrderTableDeleteButton
                    onPress={[Function]}
                  />,
                ],
              ]
            }
            disableVirtualization={false}
            getItem={[Function]}
            getItemCount={[Function]}
            horizontal={false}
            initialNumToRender={10}
            invertStickyHeaders={undefined}
            keyExtractor={[Function]}
            maxToRenderPerBatch={10}
            numColumns={1}
            onContentSizeChange={[Function]}
            onEndReachedThreshold={2}
            onLayout={[Function]}
            onMomentumScrollEnd={[Function]}
            onScroll={[Function]}
            onScrollBeginDrag={[Function]}
            onScrollEndDrag={[Function]}
            renderItem={[Function]}
            scrollEventThrottle={50}
            stickyHeaderIndices={Array []}
            updateCellsBatchingPeriod={50}
            viewabilityConfigCallbackPairs={Array []}
            windowSize={21}
          >
            <View>
              <View
                onLayout={[Function]}
                style={null}
              >
                <View
                  data={
                    Array [
                      "22/01/04 14:11:38",
                      "MRX/WETH",
                      <RedLabel>
                        Sell
                      </RedLabel>,
                      "0.01617607",
                      "0.01617607",
                      "0.00",
                      <OrderTableDeleteButton
                        onPress={[Function]}
                      />,
                    ]
                  }
                  even={0}
                  flexAr={
                    Array [
                      2,
                      2,
                      1,
                      2,
                      2,
                      2,
                      1,
                    ]
                  }
                  style={
                    Array [
                      Object {},
                      Array [
                        Object {
                          "alignItems": "center",
                          "backgroundColor": "#fefaec",
                          "display": "flex",
                          "flexDirection": "row",
                          "flexWrap": "nowrap",
                          "paddingBottom": 5,
                          "paddingLeft": 5,
                          "paddingRight": 5,
                          "paddingTop": 5,
                        },
                        undefined,
                      ],
                    ]
                  }
                  width={540}
                >
                  <View
                    even={0}
                    flexItem={2}
                    style={
                      Array [
                        Object {},
                        Array [
                          Object {
                            "alignItems": "center",
                            "flexBasis": 0,
                            "flexGrow": 2,
                            "flexShrink": 1,
                            "justifyContent": "center",
                          },
                          undefined,
                        ],
                      ]
                    }
                    width={540}
                  >
                    <Text
                      accessible={true}
                      allowFontScaling={true}
                      bold={undefined}
                      data="22/01/04 14:11:38"
                      ellipsizeMode="tail"
                      style={
                        Array [
                          Object {
                            "color": "#000000",
                            "fontFamily": "Open Sans",
                          },
                          Array [
                            Object {
                              "fontSize": 12,
                              "lineHeight": 15,
                            },
                            undefined,
                          ],
                        ]
                      }
                    >
                      22/01/04 14:11:38
                    </Text>
                  </View>
                  <View
                    even={0}
                    flexItem={2}
                    style={
                      Array [
                        Object {},
                        Array [
                          Object {
                            "alignItems": "center",
                            "flexBasis": 0,
                            "flexGrow": 2,
                            "flexShrink": 1,
                            "justifyContent": "center",
                          },
                          undefined,
                        ],
                      ]
                    }
                    width={540}
                  >
                    <Text
                      accessible={true}
                      allowFontScaling={true}
                      bold={undefined}
                      data="MRX/WETH"
                      ellipsizeMode="tail"
                      style={
                        Array [
                          Object {
                            "color": "#000000",
                            "fontFamily": "Open Sans",
                          },
                          Array [
                            Object {
                              "fontSize": 12,
                              "lineHeight": 15,
                            },
                            undefined,
                          ],
                        ]
                      }
                    >
                      MRX/WETH
                    </Text>
                  </View>
                  <View
                    even={0}
                    flexItem={1}
                    style={
                      Array [
                        Object {},
                        Array [
                          Object {
                            "alignItems": "center",
                            "flexBasis": 0,
                            "flexGrow": 1,
                            "flexShrink": 1,
                            "justifyContent": "center",
                          },
                          undefined,
                        ],
                      ]
                    }
                    width={540}
                  >
                    <Text
                      accessible={true}
                      allowFontScaling={true}
                      ellipsizeMode="tail"
                      index={undefined}
                      style={
                        Array [
                          Object {
                            "color": "#000000",
                            "fontFamily": "Open Sans",
                          },
                          Array [
                            Object {
                              "color": "#f25c74",
                              "fontFamily": "Roboto Condensed",
                              "fontSize": 12,
                              "textAlign": "center",
                            },
                            undefined,
                          ],
                        ]
                      }
                    >
                      Sell
                    </Text>
                  </View>
                  <View
                    even={0}
                    flexItem={2}
                    style={
                      Array [
                        Object {},
                        Array [
                          Object {
                            "alignItems": "center",
                            "flexBasis": 0,
                            "flexGrow": 2,
                            "flexShrink": 1,
                            "justifyContent": "center",
                          },
                          undefined,
                        ],
                      ]
                    }
                    width={540}
                  >
                    <Text
                      accessible={true}
                      allowFontScaling={true}
                      bold={undefined}
                      data="0.01617607"
                      ellipsizeMode="tail"
                      style={
                        Array [
                          Object {
                            "color": "#000000",
                            "fontFamily": "Open Sans",
                          },
                          Array [
                            Object {
                              "fontSize": 12,
                              "lineHeight": 15,
                            },
                            undefined,
                          ],
                        ]
                      }
                    >
                      0.01617607
                    </Text>
                  </View>
                  <View
                    even={0}
                    flexItem={2}
                    style={
                      Array [
                        Object {},
                        Array [
                          Object {
                            "alignItems": "center",
                            "flexBasis": 0,
                            "flexGrow": 2,
                            "flexShrink": 1,
                            "justifyContent": "center",
                          },
                          undefined,
                        ],
                      ]
                    }
                    width={540}
                  >
                    <Text
                      accessible={true}
                      allowFontScaling={true}
                      bold={undefined}
                      data="0.01617607"
                      ellipsizeMode="tail"
                      style={
                        Array [
                          Object {
                            "color": "#000000",
                            "fontFamily": "Open Sans",
                          },
                          Array [
                            Object {
                              "fontSize": 12,
                              "lineHeight": 15,
                            },
                            undefined,
                          ],
                        ]
                      }
                    >
                      0.01617607
                    </Text>
                  </View>
                  <View
                    even={0}
                    flexItem={2}
                    style={
                      Array [
                        Object {},
                        Array [
                          Object {
                            "alignItems": "center",
                            "flexBasis": 0,
                            "flexGrow": 2,
                            "flexShrink": 1,
                            "justifyContent": "center",
                          },
                          undefined,
                        ],
                      ]
                    }
                    width={540}
                  >
                    <Text
                      accessible={true}
                      allowFontScaling={true}
                      bold={undefined}
                      data="0.00"
                      ellipsizeMode="tail"
                      style={
                        Array [
                          Object {
                            "color": "#000000",
                            "fontFamily": "Open Sans",
                          },
                          Array [
                            Object {
                              "fontSize": 12,
                              "lineHeight": 15,
                            },
                            undefined,
                          ],
                        ]
                      }
                    >
                      0.00
                    </Text>
                  </View>
                  <View
                    even={0}
                    flexItem={1}
                    style={
                      Array [
                        Object {},
                        Array [
                          Object {
                            "alignItems": "center",
                            "flexBasis": 0,
                            "flexGrow": 1,
                            "flexShrink": 1,
                            "justifyContent": "center",
                          },
                          undefined,
                        ],
                      ]
                    }
                    width={540}
                  >
                    <View
                      style={
                        Array [
                          Object {},
                          Array [
                            Object {
                              "alignSelf": "center",
                              "display": "flex",
                              "height": 32,
                              "justifyContent": "center",
                              "paddingBottom": 0,
                              "paddingLeft": 5,
                              "paddingRight": 5,
                              "paddingTop": 0,
                              "width": 32,
                            },
                            undefined,
                          ],
                        ]
                      }
                    >
                      <View
                        accessibilityComponentType={undefined}
                        accessibilityLabel={undefined}
                        accessibilityTraits={undefined}
                        accessible={true}
                        collapsable={undefined}
                        hasTVPreferredFocus={undefined}
                        hitSlop={undefined}
                        isTVSelectable={true}
                        nativeID={undefined}
                        onLayout={undefined}
                        onResponderGrant={[Function]}
                        onResponderMove={[Function]}
                        onResponderRelease={[Function]}
                        onResponderTerminate={[Function]}
                        onResponderTerminationRequest={[Function]}
                        onStartShouldSetResponder={[Function]}
                        style={
                          Object {
                            "backgroundColor": "#f25c74",
                            "borderRadius": 20,
                            "opacity": 1,
                            "paddingBottom": 5,
                            "paddingLeft": 5,
                            "paddingRight": 5,
                            "paddingTop": 5,
                          }
                        }
                        testID={undefined}
                        tvParallaxProperties={undefined}
                      >
                        <Text
                          accessible={true}
                          allowFontScaling={false}
                          ellipsizeMode="tail"
                          style={
                            Array [
                              Object {
                                "color": undefined,
                                "fontSize": 11,
                              },
                              Array [
                                Object {
                                  "color": "#4b4c4d",
                                },
                                Array [
                                  Object {
                                    "color": "#fefaec",
                                  },
                                  undefined,
                                ],
                              ],
                              Object {
                                "fontFamily": "icomoon",
                                "fontStyle": "normal",
                                "fontWeight": "normal",
                              },
                            ]
                          }
                        >
                          
                        </Text>
                      </View>
                    </View>
                  </View>
                </View>
              </View>
              <View
                onLayout={[Function]}
                style={null}
              >
                <View
                  data={
                    Array [
                      "22/01/04 14:11:38",
                      "MRX/WETH",
                      <GreenLabel>
                        Buy
                      </GreenLabel>,
                      "0.01617607",
                      "0.01617607",
                      "0.00",
                      <OrderTableDeleteButton
                        onPress={[Function]}
                      />,
                    ]
                  }
                  even={1}
                  flexAr={
                    Array [
                      2,
                      2,
                      1,
                      2,
                      2,
                      2,
                      1,
                    ]
                  }
                  style={
                    Array [
                      Object {},
                      Array [
                        Object {
                          "alignItems": "center",
                          "backgroundColor": "#eae8e0",
                          "display": "flex",
                          "flexDirection": "row",
                          "flexWrap": "nowrap",
                          "paddingBottom": 5,
                          "paddingLeft": 5,
                          "paddingRight": 5,
                          "paddingTop": 5,
                        },
                        undefined,
                      ],
                    ]
                  }
                  width={540}
                >
                  <View
                    even={1}
                    flexItem={2}
                    style={
                      Array [
                        Object {},
                        Array [
                          Object {
                            "alignItems": "center",
                            "flexBasis": 0,
                            "flexGrow": 2,
                            "flexShrink": 1,
                            "justifyContent": "center",
                          },
                          undefined,
                        ],
                      ]
                    }
                    width={540}
                  >
                    <Text
                      accessible={true}
                      allowFontScaling={true}
                      bold={undefined}
                      data="22/01/04 14:11:38"
                      ellipsizeMode="tail"
                      style={
                        Array [
                          Object {
                            "color": "#000000",
                            "fontFamily": "Open Sans",
                          },
                          Array [
                            Object {
                              "fontSize": 12,
                              "lineHeight": 15,
                            },
                            undefined,
                          ],
                        ]
                      }
                    >
                      22/01/04 14:11:38
                    </Text>
                  </View>
                  <View
                    even={1}
                    flexItem={2}
                    style={
                      Array [
                        Object {},
                        Array [
                          Object {
                            "alignItems": "center",
                            "flexBasis": 0,
                            "flexGrow": 2,
                            "flexShrink": 1,
                            "justifyContent": "center",
                          },
                          undefined,
                        ],
                      ]
                    }
                    width={540}
                  >
                    <Text
                      accessible={true}
                      allowFontScaling={true}
                      bold={undefined}
                      data="MRX/WETH"
                      ellipsizeMode="tail"
                      style={
                        Array [
                          Object {
                            "color": "#000000",
                            "fontFamily": "Open Sans",
                          },
                          Array [
                            Object {
                              "fontSize": 12,
                              "lineHeight": 15,
                            },
                            undefined,
                          ],
                        ]
                      }
                    >
                      MRX/WETH
                    </Text>
                  </View>
                  <View
                    even={1}
                    flexItem={1}
                    style={
                      Array [
                        Object {},
                        Array [
                          Object {
                            "alignItems": "center",
                            "flexBasis": 0,
                            "flexGrow": 1,
                            "flexShrink": 1,
                            "justifyContent": "center",
                          },
                          undefined,
                        ],
                      ]
                    }
                    width={540}
                  >
                    <Text
                      accessible={true}
                      allowFontScaling={true}
                      ellipsizeMode="tail"
                      index={undefined}
                      style={
                        Array [
                          Object {
                            "color": "#000000",
                            "fontFamily": "Open Sans",
                          },
                          Array [
                            Object {
                              "color": "#2a986f",
                              "fontFamily": "Roboto Condensed",
                              "fontSize": 12,
                              "textAlign": "center",
                            },
                            undefined,
                          ],
                        ]
                      }
                    >
                      Buy
                    </Text>
                  </View>
                  <View
                    even={1}
                    flexItem={2}
                    style={
                      Array [
                        Object {},
                        Array [
                          Object {
                            "alignItems": "center",
                            "flexBasis": 0,
                            "flexGrow": 2,
                            "flexShrink": 1,
                            "justifyContent": "center",
                          },
                          undefined,
                        ],
                      ]
                    }
                    width={540}
                  >
                    <Text
                      accessible={true}
                      allowFontScaling={true}
                      bold={undefined}
                      data="0.01617607"
                      ellipsizeMode="tail"
                      style={
                        Array [
                          Object {
                            "color": "#000000",
                            "fontFamily": "Open Sans",
                          },
                          Array [
                            Object {
                              "fontSize": 12,
                              "lineHeight": 15,
                            },
                            undefined,
                          ],
                        ]
                      }
                    >
                      0.01617607
                    </Text>
                  </View>
                  <View
                    even={1}
                    flexItem={2}
                    style={
                      Array [
                        Object {},
                        Array [
                          Object {
                            "alignItems": "center",
                            "flexBasis": 0,
                            "flexGrow": 2,
                            "flexShrink": 1,
                            "justifyContent": "center",
                          },
                          undefined,
                        ],
                      ]
                    }
                    width={540}
                  >
                    <Text
                      accessible={true}
                      allowFontScaling={true}
                      bold={undefined}
                      data="0.01617607"
                      ellipsizeMode="tail"
                      style={
                        Array [
                          Object {
                            "color": "#000000",
                            "fontFamily": "Open Sans",
                          },
                          Array [
                            Object {
                              "fontSize": 12,
                              "lineHeight": 15,
                            },
                            undefined,
                          ],
                        ]
                      }
                    >
                      0.01617607
                    </Text>
                  </View>
                  <View
                    even={1}
                    flexItem={2}
                    style={
                      Array [
                        Object {},
                        Array [
                          Object {
                            "alignItems": "center",
                            "flexBasis": 0,
                            "flexGrow": 2,
                            "flexShrink": 1,
                            "justifyContent": "center",
                          },
                          undefined,
                        ],
                      ]
                    }
                    width={540}
                  >
                    <Text
                      accessible={true}
                      allowFontScaling={true}
                      bold={undefined}
                      data="0.00"
                      ellipsizeMode="tail"
                      style={
                        Array [
                          Object {
                            "color": "#000000",
                            "fontFamily": "Open Sans",
                          },
                          Array [
                            Object {
                              "fontSize": 12,
                              "lineHeight": 15,
                            },
                            undefined,
                          ],
                        ]
                      }
                    >
                      0.00
                    </Text>
                  </View>
                  <View
                    even={1}
                    flexItem={1}
                    style={
                      Array [
                        Object {},
                        Array [
                          Object {
                            "alignItems": "center",
                            "flexBasis": 0,
                            "flexGrow": 1,
                            "flexShrink": 1,
                            "justifyContent": "center",
                          },
                          undefined,
                        ],
                      ]
                    }
                    width={540}
                  >
                    <View
                      style={
                        Array [
                          Object {},
                          Array [
                            Object {
                              "alignSelf": "center",
                              "display": "flex",
                              "height": 32,
                              "justifyContent": "center",
                              "paddingBottom": 0,
                              "paddingLeft": 5,
                              "paddingRight": 5,
                              "paddingTop": 0,
                              "width": 32,
                            },
                            undefined,
                          ],
                        ]
                      }
                    >
                      <View
                        accessibilityComponentType={undefined}
                        accessibilityLabel={undefined}
                        accessibilityTraits={undefined}
                        accessible={true}
                        collapsable={undefined}
                        hasTVPreferredFocus={undefined}
                        hitSlop={undefined}
                        isTVSelectable={true}
                        nativeID={undefined}
                        onLayout={undefined}
                        onResponderGrant={[Function]}
                        onResponderMove={[Function]}
                        onResponderRelease={[Function]}
                        onResponderTerminate={[Function]}
                        onResponderTerminationRequest={[Function]}
                        onStartShouldSetResponder={[Function]}
                        style={
                          Object {
                            "backgroundColor": "#f25c74",
                            "borderRadius": 20,
                            "opacity": 1,
                            "paddingBottom": 5,
                            "paddingLeft": 5,
                            "paddingRight": 5,
                            "paddingTop": 5,
                          }
                        }
                        testID={undefined}
                        tvParallaxProperties={undefined}
                      >
                        <Text
                          accessible={true}
                          allowFontScaling={false}
                          ellipsizeMode="tail"
                          style={
                            Array [
                              Object {
                                "color": undefined,
                                "fontSize": 11,
                              },
                              Array [
                                Object {
                                  "color": "#4b4c4d",
                                },
                                Array [
                                  Object {
                                    "color": "#fefaec",
                                  },
                                  undefined,
                                ],
                              ],
                              Object {
                                "fontFamily": "icomoon",
                                "fontStyle": "normal",
                                "fontWeight": "normal",
                              },
                            ]
                          }
                        >
                          
                        </Text>
                      </View>
                    </View>
                  </View>
                </View>
              </View>
            </View>
          </RCTScrollView>
        </View>
      </View>
    </RCTScrollView>
  </View>
</View>
`;
